# manipulator

./: .gitignore  CLAUDE.md  MJDATA.TXT  MUJOCO_LOG.TXT  TODO.md  outline.txt  trajectories.json  常用命令.txt  技术路线可行性分析.md  训练计划.md  论文技术路线合理性分析.md
.claude/: settings.local.json
checkpoints/: sac_pirl.pt
code/: MJDATA.TXT  MUJOCO_LOG.TXT  batch_test_challenge.py  batch_test_kp.py  batch_test_stage1_collision.py  convert2xml.py  eval_checkpoint.py  eval_compare.py  eval_generalize.py  eval_per_scene.py  eval_tracking.py  fix_scenes.py  generate_challenge_close.py  generate_challenge_scenes.py  generate_close_scenes.py  generate_harder_scenes.py  pyproject.toml  test.py  test_mpc.py  test_pd.py  test_scene_vis.py  train.py  train_vanilla.py  train_vanilla_ppo.py  tune_baseline.py
code/agent/: physics_policy.py  ppo_agent.py  reward.py  sac_agent.py  value_network.py  vanilla_ppo_agent.py  vanilla_sac_agent.py
code/checkpoints/: sac_pirl.pt
code/control/: __init__.py  mpc_controller.py
code/env/: dynamics.py  kinematics.py  manipulator_env.py  vanilla_env.py
code/planner/: __init__.py  rrt_star.py
code/trajectory/: __init__.py  generator.py  reachability.py  visualizer.py
code/utils/: bc_pretrain.py  collision.py  generate_mpc_data.py  logger.py  normalizer.py  parallel_env.py  replay_buffer.py  rollout_buffer.py  sdf.py  validation.py
data/: mpc_scene9.npz
models/: panda_base.xml  panda_scene.xml  panda_scene_bak.xml
paper/: books.bib  lyapunov_analysis.md  paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  review.md
(+45 files in other folders)
