[project]
name = "manipulator-pirl"
version = "0.1.0"
description = "Physics-Informed Reinforcement Learning for 7-DOF Manipulator Obstacle Avoidance"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26",
    "mujoco>=3.1.0",
    "dm-control>=1.0.20",
    "scipy>=1.12",
    "example-robot-data>=4.4.0",
    "cvxpy>=1.8.2",
]

[project.optional-dependencies]
# pinocchio (pin) only available on Linux/macOS
# On Linux: uv pip install pin
pinocchio = ["pin>=2.7.0"]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8",
]

[tool.uv]
# uv will create .venv in this directory
dev-dependencies = [
    "pytest>=8.0",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["env", "agent", "utils"]
